--- a/package.json
+++ b/package.json
@@ -11,16 +11,21 @@
   "dependencies": {
     "@next/font": "13.1.1",
     "@splidejs/react-splide": "^0.7.12",
+    "@splidejs/splide": "^4.1.4",
+    "flowbite": "^1.6.3",
     "next": "13.1.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-responsive": "^9.0.2"
   },
   "devDependencies": {
+    "@types/node": "18.11.18",
+    "@types/react": "18.0.27",
     "autoprefixer": "^10.4.13",
     "eslint": "8.32.0",
     "eslint-config-next": "13.1.2",
     "postcss": "^8.4.21",
-    "tailwindcss": "^3.2.4"
+    "tailwindcss": "^3.2.4",
+    "typescript": "4.9.4"
   }
 }
