--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "next": "13.1.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.42.1",
     "react-responsive": "^9.0.2"
   },
   "devDependencies": {
